--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,3 @@
 torch==1.7.1
 -e git+https://github.com/huggingface/transformers.git@2b54206a0809e6807bb8dcc8eeeabd1ad6f4a45b#egg=transformers
+sentencepiece
